core reivew fixes